--- a/estilos/mobilefirst.css
+++ b/estilos/mobilefirst.css
@@ -4,18 +4,46 @@
 #536B26 verde 
 #D68D43 marron meio que dourado
 #C6467D  rosa
-#671027 um verelho vinho
+#b91440 um verelho vinho
 */
 
 *{
     margin: 0px;
     padding: 0px;
     font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
 }
 html, body{
+    background-color: white;
     height: 100vh;
     width: 100vw;
 }
-body{
-    background-color: black;
+main{
+    width: 100vw;
+    height: 100vh;
+    position: relative;
+}
+section#login{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: antiquewhite;
+    width: 250px;
+    height: 500px;
+    border-radius: 40px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.296);
+}
+section#login > div#infeite{
+    background: black url(../imagens/pexels-felix-mittermeier-2832074\ \(1\).jpg);
+    background-size: cover;
+    background-position: top center;
+    height: 200px;
+    display: block;
+    border-radius: 40px 40px 0px 0px;
+}
+section#login > div#formulario{
+   padding: 20px;
+   display: block;
+
 }
