--- a/estilos/mediaquery.css
+++ b/estilos/mediaquery.css
@@ -3,6 +3,11 @@
 @media screen and (min-width: 768px) and (max-width: 992px){
     body{
         background-image: url(../imagens/pexels-felix-mittermeier-2832074\ \(1\).jpg);
+        background-position: top left;
+        background-size: cover;
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+
     }
     section#login{
         
@@ -47,6 +52,10 @@
     }
     body{
         background-image: url(../imagens/pexels-felix-mittermeier-2832074\ \(1\).jpg);
+        background-position: top left;
+        background-size: cover;
+        background-attachment: fixed;
+        background-repeat: no-repeat;
     }
 
 }
