--- a/estilos/mediaquery.css
+++ b/estilos/mediaquery.css
@@ -30,13 +30,33 @@
 
 
     }
-    section#login div#ola  h1{    
+    section#login div#ola  h1{  
+        margin-top: 30px;  
         font-size: 2em;
         text-align: center;
         margin-bottom: 30px;
         
     
     }
+    section#login div#ola form{
+        margin-top: 30px;
+    }
+    section#login > div#ola input[type= text], input[type= password]{
+        width: 300px;
+       
+       
+    }
+    form input[type= submit]{
+        margin: 30px auto 49px auto;
+        display: block;
+        font-size: 1.3em;
+        padding: 10px;
+        width: 30%;
+        
+    
+        
+    }
+    
 }
 @media screen and (min-width: 992px){
     section#login{
@@ -59,6 +79,23 @@
          
 
     }
+    section#login div#ola form{
+        margin-top: 30px;
+    }
+
+    section#login > div#ola input[type= text], input[type= password]{
+        width: 300px;
+       
+       
+    }
+    form input[type= submit]{
+        width: 30%;
+        margin: 30px auto 49px auto;
+        display: block;
+        padding: 10px;
+        font-size: 1.5em;
+        
+    }
     body{
         background-image: url(../imagens/pexels-felix-mittermeier-2832074\ \(1\).jpg);
         background-position: top left;
@@ -66,7 +103,8 @@
         background-attachment: fixed;
         background-repeat: no-repeat;
     }
-    section#login div#ola  h1{    
+    section#login div#ola  h1{   
+        margin-top: 30px;   
         font-size: 2em;
         text-align: center;
         margin-bottom: 30px;
