--- a/estilos/mediaquery.css
+++ b/estilos/mediaquery.css
@@ -11,8 +11,8 @@
     }
     section#login{
         
-        width: 80vw;
-        height: 60vh;
+        width: 800px;
+        height: 600px;
         
     }
     section#login > div#infeite{
@@ -62,7 +62,7 @@
     section#login{
         
         width: 950px;
-        height: 60vh;
+        height: 600px;
         
     }
     section#login > div#infeite{
