--- a/estilos/mobilefirst.css
+++ b/estilos/mobilefirst.css
@@ -78,11 +78,21 @@ section#login div#ola form input{
     
 }
 
-section#login > div#ola input[type= text], input[type= password]{
+section#login > div#ola input.campo{
     font-size: 12px;
     padding: 6px 3px 6px 5px;
     margin-left: 10px;
     margin-bottom: 10px;
+    transform: translateY(-8px);
+    
+}
+section#login > div#ola input.campo:focus-within{
+   background-color: rgba(252, 234, 211, 0.652);
+   
+   
+   
+
+
 }
 form input[type= submit]{
     margin: 3px auto 25px auto;
