--- a/estilos/mediaquery.css
+++ b/estilos/mediaquery.css
@@ -12,7 +12,7 @@
     section#login{
         
         width: 80%;
-        height: 70%;
+        height: 500px;
         
     }
     section#login > div#infeite{
@@ -40,12 +40,12 @@
     }
     section#login div#ola form{
         margin-top: 30px;
-        width: 80%;
-        height: 70%;
+       
         
     }
     section#login > div#ola input[type= text], input[type= password]{
-        width: 50%;
+        width: 300px;
+        
        
        
     }
@@ -54,7 +54,8 @@
         display: block;
         font-size: 1.3em;
         padding: 10px;
-        width: 30%;
+        width: 140px;
+       
         
     
         
@@ -64,7 +65,7 @@
 @media screen and (min-width: 992px){
     section#login{
         width: 80%;
-        height: 70%;
+        height: 500px;
         
         
     }
