--- a/estilos/mediaquery.css
+++ b/estilos/mediaquery.css
@@ -10,7 +10,7 @@
 
     }
     section#login{
-        
+        margin-top: 30px;
         width: 80%;
         height: 500px;
         
@@ -64,6 +64,7 @@
 }
 @media screen and (min-width: 992px){
     section#login{
+        margin-top: 30px;
         width: 80%;
         height: 500px;
         
