--- a/estilos/mediaquery.css
+++ b/estilos/mediaquery.css
@@ -1,29 +1,29 @@
 @charset "utf-8";
 
-@media screen and (min-width: 768px) and (max-width: 992px){
-    body{
-        background-image: url(../imagens/pexels-felix-mittermeier-2832074\ \(1\).jpg);
-        background-position: top left;
-        background-size: cover;
-        background-attachment: fixed;
-        background-repeat: no-repeat;
+@media screen and (min-width: 768px) and (max-width: 992px){ /*Definições para tablet. não comentarei tanto pois a maioria tem o mesmo intuito das definições principais para o mobile apenas mudaremos o valro de alguams coisas */
+    body{ /*Definições para o corpo */
+        background-image: url(../imagens/pexels-felix-mittermeier-2832074\ \(1\).jpg); /*Definimos para o mesmo um bacground image */
+        background-position: top left;/* a posição para a imagem será do seu topo a esquerda*/
+        background-size: cover; /*Imagem adaptada*/
+        background-attachment: fixed;/*A imagem semanterá mesmo que o conteúso seja mais extenso*/
+        background-repeat: no-repeat; /*A imagem não irá se repetir*/
 
     }
-    section#login{
+    section#login{ /*O section de div login terá essa configuração*/
         margin-top: 30px;
         width: 80%;
         height: 450px;
         margin-bottom: 30px;
         
     }
-    section#login > div#infeite{
+    section#login > div#infeite{ /*definição para a div infeite, ou seja, para a que irá conter a imagem*/
         float: left;
         width: 30%;
         height: 100%;
         border-radius: 40px 0px 0px 40px;
 
     }
-    section#login > div#ola{
+    section#login > div#ola{ /*definição para a div ola, ou seja, para a que irá conter o formulário*/
         float: right;
         width: 70%;
         height: 100%;
@@ -31,7 +31,7 @@
 
 
     }
-    section#login div#ola  h1{  
+    section#login div#ola  h1{  /*Definição para o h1 da div ola*/
         margin-top: 30px;  
         font-size: 2em;
         text-align: center;
@@ -39,18 +39,18 @@
         
     
     }
-    section#login div#ola form{
+    section#login div#ola form{  /*Definição para o formulário da div ola*/
         margin-top: 30px;
        
         
     }
-    section#login > div#ola input[type= text], input[type= password]{
+    section#login > div#ola input.campo{ /*Definições para o input de classe campo do formulário*/
         width: 300px;
         
        
        
     }
-    form input[type= submit]{
+    form input[type= submit]{ /*Definições do input do tipo submit dentro do fomulário*/
         margin: 30px auto 49px auto;
         display: block;
         font-size: 1.3em;
@@ -62,9 +62,19 @@
         
     }
     
+    
 }
-@media screen and (min-width: 992px){
-    section#login{
+@media screen and (min-width: 992px){ /*O section de div login terá essa configuração*/
+
+    body{ /*Definições para o corpo */
+        background-image: url(../imagens/pexels-felix-mittermeier-2832074\ \(1\).jpg); /*Definimos para o mesmo um bacground image */
+        background-position: top left;/* a posição para a imagem será do seu topo a esquerda*/
+        background-size: cover; /*Imagem adaptada*/
+        background-attachment: fixed;/*A imagem semanterá mesmo que o conteúso seja mais extenso*/
+        background-repeat: no-repeat; /*A imagem não irá se repetir*/
+
+    }
+    section#login{ /*O section de div login terá essa configuração*/
         margin-top: 30px;
         width: 80%;
         height: 450px;
@@ -72,13 +82,13 @@
         
         
     }
-    section#login > div#infeite{
+    section#login > div#infeite{  /*definição para a div infeite, ou seja, para a que irá conter a imagem*/
         float: left;
         width: 40%;
         height: 100%;
         border-radius: 40px 0px 0px 40px;
     }
-    section#login > div#ola{
+    section#login > div#ola{  /*definição para a div ola, ou seja, para a que irá conter o formulário*/
         float: right;
         width: 60%;
         height: 100%;
@@ -86,17 +96,24 @@
          
 
     }
-    section#login div#ola form{
+    section#login div#ola  h1{ /*Definição para o h1 da div ola*/  
+        margin-top: 30px;   
+        font-size: 2em;
+        text-align: center;
+        margin-bottom: 30px;
+    
+    }
+    section#login div#ola form{ /*Definição para o formulário da div ola*/
         margin-top: 30px;
       
     }
 
-    section#login > div#ola input[type= text], input[type= password]{
+    section#login > div#ola input.campo{ /*Definições para o input de classe campo do formulário*/
         width: 300px;
        
        
     }
-    form input[type= submit]{
+    form input[type= submit]{ /*Definições do input do tipo submit dentro do fomulário*/
         width: 30%;
         margin: 30px auto 49px auto;
         display: block;
@@ -104,19 +121,7 @@
         font-size: 1.5em;
         
     }
-    body{
-        background-image: url(../imagens/pexels-felix-mittermeier-2832074\ \(1\).jpg);
-        background-position: top left;
-        background-size: cover;
-        background-attachment: fixed;
-        background-repeat: no-repeat;
-    }
-    section#login div#ola  h1{   
-        margin-top: 30px;   
-        font-size: 2em;
-        text-align: center;
-        margin-bottom: 30px;
     
-    }
+    
 
 }
